# xjackfreak

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  README  TODO  config.h.in  configure  configure.ac  xjackfreak-1.0.tar.bz2
conf/: Makefile.am  Makefile.in  button03c.ppm  button04c.ppm  button05d.ppm  led-grn-01.ppm  led-red-01.ppm  rbut01-edit2.ppm  tributD01.ppm  tributL01.ppm  tributR01.ppm  tributU01.ppm
doc/: Makefile.am  Makefile.in  manual
package/gentoo/media-sound/xjackfreak/: xjackfreak-9999.ebuild
src/: Makefile.am  Makefile.in  fftlib1.c  jack.c  jfgraplib1.c  load_ppm.c  plist.c  signals.c  visualx11.c  xjackfreak1.c
